@@ -1,4 +1,4 @@
 #ifndef __CHANNEL_H__
 #define __CHANNEL_H__
-char *get_channel_url_by_id(const char *);
+char *get_channel_url_by_id(const char *, int);
 #endif /* __CHANNEL_H__*/
