@@ -105,4 +105,20 @@ static char *traffic_site_list[] =
     "警廣高雄台", "267",
 	NULL
 };
+
+static char *live_site_list[] =
+{
+	"流行追蹤", "21",
+	"中天新聞台", "37",
+	"大愛電視台", "38",
+	"華視影音頻道", "50",
+	"生命電視台", "54",
+	"大愛電視二台", "57",
+	"世棒2台", "603",
+	"世棒1台", "996",
+	"KuLife", "997",
+	"KuMovie", "998",
+	"KuDrama", "999",
+	NULL
+};
 #endif /* __SITE_LIST_H__ */
